--- a/src/index.css
+++ b/src/index.css
@@ -13,15 +13,5 @@ body {
 }
 
 .burger-btn {
-  @apply w-5 h-7 ml-5 relative cursor-pointer;
-}
-
-.burger-btn:before {
-  content: "";
-  @apply absolute top-0 w-5 bg-black h-0.5;
-}
-
-.burger-btn:after {
-  content: "";
-  @apply absolute bottom-0 w-5 bg-black h-0.5;
+  @apply flex w-7 h-5 ml-5 relative cursor-pointer border-y-black border-y-2;
 }
